# hyperspectral-selection-bias

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  regen_outputs3_foldmean.py  regen_outputs3_pooled.py  regen_pipeline_comparison_foldmean.py  requirements.txt  run_selection_bias.py  zenodo.json
config/: default.yaml
outputs3/data/: null.pkl
outputs3/tables/: README_MIXED.txt  permutation_summary.csv  selection_bias_multiseed.csv  selection_bias_multiseed_raw.csv  stats_summary.csv
outputs3/tables_foldmean/: mask_overlap.csv  pipeline_comparison.csv  selection_bias_multiseed.csv  selection_bias_multiseed_raw.csv  stats_summary.csv
outputs3/tables_pooled/: aggregation_comparison.csv  selection_bias_pooled.csv  selection_bias_pooled_raw.csv
paper_visuals/: fig_null_distribution.py  fig_paired_slope.py  fig_seed_stability.py
src/core/: __init__.py  config.py  cv.py  logging_setup.py  metrics_ci.py  paths.py  spectral_utils.py
src/m01_io/: __init__.py  dataset_registry.py  envi_loader.py
src/m02_preprocessing/: __init__.py  segmentation.py  spectral.py
src/m03_indices/: __init__.py  indices.py
src/m04_features/: __init__.py  extraction.py  ga_feature_selection.py  ga_wavelength_viz.py  selectors.py
src/m05_dataset/: __init__.py  builder.py  dataset_viz.py  ground_truth.py  holdout_split.py  outlier_filter.py  visualize.py
src/m06_selection_bias/: __init__.py  cv_comparison.py  multi_dataset.py  multiseed.py  nested_ga.py  report.py  stats_tests.py  (+1 more)
tests/: test_indices.py
tools/: dataset_indir.py  import_dataset.py
